test/functional/failtests/lambdas/call.paramCountMismatch.txt
TypeError: Lambda function expected inferred type with 0 arguments, 1 found
3 | func main() {
4 |     foo((): 123);
  |         ^ (4:9)
5 | }

